--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
@@ -24,12 +26,42 @@ android {
 }
 
 dependencies {
+    def fragment_version = "1.2.0"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+
+    //moxy
+    implementation 'com.github.moxy-community:moxy-androidx:2.0.2'
+    kapt "com.github.moxy-community:moxy-compiler:2.0.2"
+    annotationProcessor "com.github.moxy-community:moxy-compiler:2.0.2"
+    implementation 'com.github.moxy-community:moxy-material:2.0.2'
+
+    //anko
+    implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation "org.jetbrains.anko:anko-design:$anko_version"
+
+    //Dagger 2
+    implementation 'com.google.dagger:dagger:2.14.1'
+    kapt "com.google.dagger:dagger-compiler:2.14.1"
+    compileOnly 'org.glassfish:javax.annotation:3.1.1'
+
+    // RXJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
 }
