--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
 
     //moxy
-    implementation 'com.github.moxy-community:moxy-androidx:2.0.2'
+    def withoutX = {
+        exclude group: 'com.github.moxy-community', module: 'moxy-androidx:2.0.2'
+    }
+    implementation 'com.github.moxy-community:moxy-androidx:2.0.2', withoutX
     kapt "com.github.moxy-community:moxy-compiler:2.0.2"
     annotationProcessor "com.github.moxy-community:moxy-compiler:2.0.2"
     implementation 'com.github.moxy-community:moxy-material:2.0.2'
