--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,27 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.0"
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     defaultConfig {
         applicationId "com.example.azimutlab"
         minSdkVersion 15
         targetSdkVersion 28
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath true
+                arguments = [
+                        // here go the options for Moxy compiler
+                        disableEmptyStrategyCheck: 'true'
+                ]
+            }
+        }
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -46,10 +63,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
 
     //moxy
-    implementation 'com.github.moxy-community:moxy-androidx:2.0.2'
-    kapt "com.github.moxy-community:moxy-compiler:2.0.2"
-    annotationProcessor "com.github.moxy-community:moxy-compiler:2.0.2"
-    implementation 'com.github.moxy-community:moxy-material:2.0.2'
+    def moxyVersion = "2.1.1"
+    implementation "com.github.moxy-community:moxy:$moxyVersion"
+    annotationProcessor "com.github.moxy-community:moxy-compiler:$moxyVersion"
+    implementation "com.github.moxy-community:moxy-app-compat:$moxyVersion"
+
+
 
     //anko
     implementation "org.jetbrains.anko:anko:$anko_version"
@@ -64,4 +83,10 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
     implementation 'com.github.VictorAlbertos.RxCache:runtime:1.8.3-2.x'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+
+    // rxandroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
+    //stetho
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 }
