--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,12 +62,16 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
 
-    //moxy
-    def moxyVersion = "2.1.1"
-    implementation 'com.github.moxy-community:moxy-androidx:2.0.2'
-    kapt "com.github.moxy-community:moxy-compiler:2.0.2"
-    annotationProcessor "com.github.moxy-community:moxy-compiler:2.0.2"
-    implementation 'com.github.moxy-community:moxy-material:2.0.2'
+//    //moxy
+//    def moxyVersion = "2.1.1"
+//    implementation 'com.github.moxy-community:moxy-androidx:2.0.2'
+//    kapt "com.github.moxy-community:moxy-compiler:2.0.2"
+//    annotationProcessor "com.github.moxy-community:moxy-compiler:2.0.2"
+//    implementation 'com.github.moxy-community:moxy-material:2.0.2'
+
+    //LiveData
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
 
     //anko
