--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
     kotlinOptions {
         jvmTarget = "1.8"
     }
@@ -101,6 +104,7 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:2.2.1"
     implementation "org.koin:koin-android:2.2.1"
     implementation "org.koin:koin-core:2.2.1"
+    implementation "org.koin:koin-test:2.2.1"
 
     implementation 'com.android.support:multidex:1.0.3'
 }
